Remove combined transform mojo